# operator-campaigns

./: 2025-02-10-1741-campaign-67.html  2025-02-10-1900-campaign-68.html  2026-02-11-0639-campaign-67.html  2026-02-11-1849-campaign-70.html  2026-02-15-0555-campaign-108.html  2026-02-15-2337-campaign-113.html  2026-02-17-1811-campaign-126.html  2026-02-17-2056-campaign-127.html  2026-02-17-2202-campaign-128.html  2026-02-17-2202-campaign-129.html  2026-03-03-1631-campaign-131.html  2026-03-03-1909-campaign-132.html  2026-03-04-0334-campaign-133.html  2026-03-07-2207-campaign-147.html  README.md  docker-compose.yaml  pyproject.toml
app/: Dockerfile  main.py  models.py  pool.py  streaming.py
config/: prometheus.yml
loadgen/: Dockerfile  main.py
